--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,29 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #FDFDFD;
+  padding-bottom: 70px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.app {
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+header {
+  width: auto;
+  height: 40px;
+  padding: 10px 0;
+  background: #417690;
+  line-height: 40px;
+  color: #ffc;
+  overflow: hidden;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.site-title {
+  margin-bottom: 40px;
+  font-style: italic;
+  color: #f5dd5d;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 0px 20px;
 }
